PR11275: be less verbose in case of command line option parsing

* main.cxx (main): exit() instead of printing usage for most errors.
  Also support --help.